Merge changes for release 2019.0.11
* Fix #12: Report writer subroutine call. 
* Fail a script upload if file name is not lower case or does not match object name. 
* Fix integration tests to honor the configured osPromptPattern.
* Change the default os prompt pattern
* Improve whitenoise to recognize unrecognized declare scopes. 
* Improve cdoc to not bomb on certain record declarations.