@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.cerner.ccl</groupId>
     <artifactId>ccltesting-parent-pom</artifactId>
-    <version>2.0.0</version>
+    <version>2.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>CCL Testing Parent POM</name>
     <description>A POM that provides general-use artifacts for all projects in the CCL Testing group</description>
@@ -172,7 +172,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    <argLine>-Xmx1024m</argLine>
                     <argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
                     <excludes>
                         <exclude>**/*ITest.java</exclude>
@@ -190,13 +190,9 @@
                         <include>**/*ITest.java</include>
                     </includes>
                     <systemPropertyVariables>
+                        <!-- these are only needed for ccl-maven-plugin, but why duplicate the entire plugin spec in that one project?-->
+                        <maven-profile>${maven-profile}</maven-profile>
                         <maven.home>${maven.home}</maven.home>
-                        <!-- these are only necessary to build ccl-maven-plugin, but why duplicate the entire plugin spec in that one project? -->
-                        <ccl-host>${ccl-host}</ccl-host>
-                        <ccl-environment>${ccl-environment}</ccl-environment>
-                        <ccl-domain>${ccl-domain}</ccl-domain>
-                        <ccl-hostCredentialsId>${ccl-hostCredentialsId}</ccl-hostCredentialsId>
-                        <ccl-frontendCredentialsId>${ccl-frontendCredentialsId}</ccl-frontendCredentialsId>
                     </systemPropertyVariables>
                 </configuration>
                 <executions>
